--- a/requirements.txt
+++ b/requirements.txt
@@ -32,9 +32,11 @@ pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.1.0
+scikeras==0.13.0
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
+tensorflow==2.20.0
 tornado==6.5.2
 traitlets==5.14.3
 tzdata==2025.2
